@@ -8,16 +8,11 @@ import re
 import threading
 import warnings
 
-import rasterio
-from rasterio._env import (
-    GDALEnv, del_gdal_config, get_gdal_config, set_gdal_config)
+from rasterio._env import GDALEnv, get_gdal_config, set_gdal_config
 from rasterio.compat import string_types, getargspec
-from rasterio.dtypes import check_dtype
 from rasterio.errors import (
     EnvError, GDALVersionError, RasterioDeprecationWarning)
-from rasterio.path import parse_path, UnparsedPath, ParsedPath
 from rasterio.session import Session, AWSSession, DummySession
-from rasterio.transform import guard_transform
 
 
 class ThreadEnv(threading.local):
@@ -226,16 +221,6 @@ class Env(object):
         options.update(**kwargs)
         return Env(*args, **options)
 
-    @property
-    def is_credentialized(self):
-        """Test for existence of cloud credentials
-
-        Returns
-        -------
-        bool
-        """
-        return hascreds()
-
     def credentialize(self):
         """Get credentials and configure GDAL
 
@@ -247,7 +232,7 @@ class Env(object):
         None
 
         """
-        if hascreds():
+        if self.session.hascreds(getenv()):
             pass
         else:
             cred_opts = self.session.get_credential_options()
@@ -338,6 +323,7 @@ def setenv(**options):
 
 
 def hascreds():
+    warnings.warn("Please use Env.session.hascreds() instead", RasterioDeprecationWarning)
     return local._env is not None and all(key in local._env.get_config_options() for key in ['AWS_ACCESS_KEY_ID', 'AWS_SECRET_ACCESS_KEY'])
 
 
@@ -397,12 +383,16 @@ def ensure_env_with_credentials(f):
         else:
             env_ctor = Env.from_defaults
 
-        if hascreds():
-            session = DummySession()
-        elif isinstance(args[0], str):
-            session = Session.from_path(args[0])
+        if isinstance(args[0], str):
+            session_cls = Session.cls_from_path(args[0])
+
+            if local._env and session_cls.hascreds(getenv()):
+                session_cls = DummySession
+
+            session = session_cls()
+
         else:
-            session = Session.from_path(None)
+            session = DummySession()
 
         with env_ctor(session=session):
             return f(*args, **kwds)
